update css to fit login form

--- a/public/login.html
+++ b/public/login.html
@@ -1,15 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang='en'>
     <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset='utf-8'>
+        <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+        <meta name='viewport' content='width=device-width, initial-scale=1'>
         <title>Login &amp; Signup | csideanime.com</title>
-        <link rel="icon" type="image/x-icon" href="https://s3-us-west-2.amazonaws.com/csideanime.com/images/favicon.ico" />
-        <link rel="stylesheet" type="text/css" href="/css/main.css">
+        <link rel='icon" type="image/x-icon' href='https://d1ec88z179f6hs.cloudfront.net/images/favicon.ico' />
+        <link rel='stylesheet' type='text/css' href='/css/main.css'>
     </head>
     <body>
-        <header class="group">
+        <header class='group'>
             <nav>
                 <ul>
                     <li><a href='/index.html'>index</a></li>
@@ -17,18 +17,20 @@
                 </ul>
             </nav>
         </header>
-
-        <div class="content group">
-            <form>
-                <input type='text' name='username' placeholder='username...' />
+        <div class='content group'>
+            <form action='#' method='POST' onsubmit='return false;'>
+                <input type='text' name='email' placeholder='email...' autofocus />
+                <input type='text' name='password' placeholder='display name...' />
                 <input type='password' name='password' placeholder='password...' />
+                <button>Login</button>
+                <button class='blue'>Create Account</button>
+                <a href='#' onclick='return false;'>forgot password?</a>
             </form>
         </div>
-
-        <footer class="group">
+        <footer class='group'>
             <p>csideanime.com © 2015</p>
-            <div class="scripts">
-                <script type="text/javascript" src="/js/main.js" async></script>
+            <div class='scripts'>
+                <script type='text/javascript' src='/js/main.js' async></script>
             </div>
         </footer>
     </body>
