add missing oauth links

--- a/public/login.html
+++ b/public/login.html
@@ -28,6 +28,11 @@
                 <a href='#' class='btn' onclick='return false;'>forgot password?</a>
                 <input type='hidden' name='name' placeholder='display name' />
             </form>
+            <div class='oauth'>
+                <a class='btn google-oauth'>g</a>
+                <a class='btn facebook-oauth'>f</a>
+                <a class='btn twitter-oauth'>t</a>
+            </div>
         </div>
         <footer class='group'>
             <p>csideanime.com © 2015</p>
