fix url for links and adjust pointer on disabled buttons

--- a/public/login.html
+++ b/public/login.html
@@ -29,9 +29,9 @@
                 <input type='hidden' name='name' placeholder='display name' />
             </form>
             <div class='oauth'>
-                <a class='btn google-oauth'>g</a>
-                <a class='btn facebook-oauth'>f</a>
-                <a class='btn twitter-oauth'>t</a>
+                <a href='#' class='btn google-oauth'>g</a>
+                <a href='#' class='btn facebook-oauth'>f</a>
+                <a href='#' class='btn twitter-oauth'>t</a>
             </div>
         </div>
         <footer class='group'>
