--- a/public/login.html
+++ b/public/login.html
@@ -18,19 +18,20 @@
             </nav>
         </header>
         <div class='content group'>
-            <form action='#' method='POST' onsubmit='return false;'>
+            <form action='#' class='login' method='POST' onsubmit='return false;'>
                 <input type='text' name='email' placeholder='email or username' autofocus />
                 <input type='password' name='password' placeholder='password' />
-                <input class='create' type='password' name='password-two' placeholder='password' />
-                <input class='create' type='text' name='display-name' placeholder='email or username' autofocus />
-                <button disabled>Login</button>
-                <button class='blue' disabled>Create Account</button>
+                <input class='register' type='password' name='password-confirmation' placeholder='confirm password' />
+                <input class='register' type='text' name='display-name' placeholder='email or username' autofocus />
+                <button disabled>Sign In</button>
+                <button class='blue' disabled>Register</button>
                 <a href='#' class='btn' onclick='return false;'>forgot password?</a>
                 <input type='hidden' name='name' placeholder='display name' />
                 <div class='oauth'>
-                    <a href='#' class='btn google-oauth'>g</a>
-                    <a href='#' class='btn facebook-oauth'>f</a>
-                    <a href='#' class='btn twitter-oauth'>t</a>
+                    <a href='#' class='btn google-oauth'></a>
+                    <a href='#' class='btn facebook-oauth'></a>
+                    <a href='#' class='btn twitter-oauth'></a>
+                    <a href='#' class='btn github-oauth'></a>
                 </div>
             </form>
         </div>
