--- a/public/login.html
+++ b/public/login.html
@@ -5,8 +5,9 @@
         <meta http-equiv='X-UA-Compatible' content='IE=edge'>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
         <title>Login &amp; Signup | csideanime.com</title>
-        <link rel='icon" type="image/x-icon' href='https://d1ec88z179f6hs.cloudfront.net/images/favicon.ico' />
+        <link rel='icon' type='image/x-icon' href='https://d1ec88z179f6hs.cloudfront.net/images/favicon.ico' />
         <link rel='stylesheet' type='text/css' href='/css/main.css'>
+        <script href='https://cdnjs.cloudflare.com/ajax/libs/mithril/0.1.30/mithril.min.js'></script>
     </head>
     <body>
         <header class='group'>
@@ -18,15 +19,14 @@
             </nav>
         </header>
         <div class='content group'>
-            <form action='#' class='login' method='POST' onsubmit='return false;'>
-                <input type='text' name='email' placeholder='email or username' autofocus />
-                <input type='password' name='password' placeholder='password' />
-                <input class='register' type='password' name='password-confirmation' placeholder='confirm password' />
-                <input class='register' type='text' name='display-name' placeholder='email or username' autofocus />
-                <button disabled>Sign In</button>
-                <button class='blue' disabled>Register</button>
+            <form action='#' class='loginForm' method='POST' onsubmit='return false;'>
+                <label><input type='text' name='email' placeholder='email or username' autofocus /></label>
+                <label><input type='password' name='password' placeholder='password' /></label>
+                <label><input class='register' type='password' name='passwordConfirmation' placeholder='confirm password' /></label>
+                <label><input class='register' type='text' name='displayName' placeholder='display name' autofocus /></label>
+                <button class='disabled' name='signIn'>Sign In</button>
+                <button class='disabled blue' name='register'>Register</button>
                 <a href='#' class='btn' onclick='return false;'>forgot password?</a>
-                <input type='hidden' name='name' placeholder='display name' />
                 <div class='oauth'>
                     <a href='#' class='btn google-oauth'></a>
                     <a href='#' class='btn facebook-oauth'></a>
@@ -38,7 +38,7 @@
         <footer class='group'>
             <p>csideanime.com © 2015</p>
             <div class='scripts'>
-                <script type='text/javascript' src='/js/main.js' async></script>
+                <script async type='text/javascript' src='/js/main.js'></script>
             </div>
         </footer>
     </body>
