--- a/public/login.html
+++ b/public/login.html
@@ -20,7 +20,7 @@
         </header>
         <div class='content group'>
             <form action='#' class='loginForm' method='POST' onsubmit='return false;'>
-                <label><input type='text' name='email' placeholder='email or username' autofocus /></label>
+                <label><input type='text' name='email' placeholder='email' autofocus /></label>
                 <label><input type='password' name='password' placeholder='password' /></label>
                 <label><input class='register' type='password' name='passwordConfirmation' placeholder='confirm password' /></label>
                 <label><input class='register' type='text' name='displayName' placeholder='display name' autofocus /></label>
